# TwitchChatOverlay

./: CMakeLists.txt  CustomWindow.qml  Main.qml  SettingsDialog.qml  SystemTray.qml  UserSettings.qml  main.cpp  shortcutmanager.h  twitchchatclient.cpp  twitchchatclient.h
include/: twitchchatclient.h
qml/: CustomWindow.qml  Main.qml  SettingsDialog.qml
qml/Singletons/: UserSettings.qml
resources/icons/: icons.qrc
src/: main.cpp  shortcutmanager.cpp  twitchchatclient.cpp
